# kethosbase-cli

./: .gitattributes  .gitignore  .goreleaser.yaml  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: javy-patched.yml  release.yml
docs/design/: declarative-schemas.md
examples/functions/: hello.ts
internal/api/: client.go
internal/cli/: db.go  functions.go  gen.go  link.go  login.go  migrate.go  root.go
internal/config/: config.go
internal/functions/bundle/: bundle.go  bundle_test.go  sdk_shim.js
internal/functions/javytool/: integration_test.go  javytool.go  javytool_test.go  plugin.go
internal/functions/wasmcheck/: wasmcheck.go  wasmcheck_test.go
internal/functions/wasmcheck/testdata/: sample-js-serve.wasm  sample-kethosbase.wasm
internal/introspect/: introspect.go
internal/migrate/: migrate.go  migrate_test.go
internal/schema/: diff.go  diff_test.go  parse.go  parse_test.go  render.go  schema.go
npm/: install.js  package.json
plugin/: Cargo.toml  README.md  build.sh
plugin/javy-toolchain/: README.md  build-javy-and-plugin.sh  build-patched-javy.sh  patch-javy.py  smoke.py
plugin/src/: lib.rs
