# Kethosbase Javy plugin — WASI preview 1.
#
# This crate compiles to a Javy *plugin* Wasm module. The plugin embeds the
# QuickJS runtime and installs six global functions (`__kb_*`) that the
# `@kethosbase/functions` SDK calls. Each global marshals strings in/out of the
# plugin's linear memory and forwards to the platform host functions imported
# from the Wasm module namespace `kethosbase` (see `src/lib.rs`).
#
# Build (produces the *raw* plugin; must then be run through `javy init-plugin`):
#   cargo build --target=wasm32-wasip1 --release
#   javy init-plugin target/wasm32-wasip1/release/kethosbase_javy_plugin.wasm \
#       -o ../internal/functions/build/plugin/kethosbase-plugin.wasm
#
# Pinned to Javy CLI v9.0.0 (javy-plugin-api v7). See ADR-0091.

[package]
name = "kethosbase-javy-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "kethosbase_javy_plugin"
crate-type = ["cdylib"]

[dependencies]
javy-plugin-api = "7.0.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
